# MoniGuard

./: .gitignore  CMakeLists.txt  MoniGuardAPI.sln  MoniGuardAPI.sln.DotSettings  README.md  authorization.py  gol.py  local.properties  local_server.py  main.cpp  main.py  myLogin.py  mylog.py  service.py  settings.gradle.kts
MoniGuardAPI/: Camera.cs  CapturedPhoto.cs  Face.cs  Guest.cs  GuestToPhotos.cs  Message.cs  MoniGuardAPI.csproj  MoniGuardAPI.http  Photo.cs  Program.cs  Resident.cs  Scene.cs  Settings.cs  WeatherForecast.cs  appsettings.json
MoniGuardAPI/Controllers/: AnalysisController.cs  AnalyzeController.cs  RedisTestController.cs  ResidentsController.cs  ScenesController.cs  WeatherForecastController.cs
MoniGuardAPI/Data/: MoniGuardAPIContext.cs
MoniGuardAPI/Migrations/: 20240410061352_InitialCreate.Designer.cs  20240410061352_InitialCreate.cs  20240410222904_InitialCreate.Designer.cs  20240410222904_InitialCreate.cs  20240410235418_InitialCreate.Designer.cs  20240410235418_InitialCreate.cs  20240427151358_InitialCreate.Designer.cs  20240427151358_InitialCreate.cs  20240507145130_InitialCreate.Designer.cs  20240509142630_Genshin.Designer.cs  20240509142630_Genshin.cs  20240523094249_StarRail.Designer.cs  20240523094249_StarRail.cs  20240605084053_StarRail.Designer.cs  (+8 more)
app/: build.gradle.kts  lint-baseline.xml
face_management/: face_manager.py
gradle/: libs.versions.toml
keystores/: key.jks
moni_guard_api/: analysis_api.py  analyze.py  face.py  guest.py  loadFacesData.py  moni_guard_api.py  photo.py  scene.py  scenes_api.py
(+146 files in other folders)
